--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "editor.fontFamily": "Corbel \"Regular\"",
     "debug.console.fontFamily": "",
-    "terminal.integrated.fontFamily": "monospace"
+    "terminal.integrated.fontFamily": "Ubuntu Mono Regular"
 }
